# detree3

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
