[package]
name = "detree3"
version = "1.0.0"
edition = "2021"
authors = ["Morgan Ross <morgan@example.com>"]
description = "Convert tree lists or JSON into directories & Markdown files"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
