[package]
name = "detree3"
version = "1.0.0"
edition = "2021"
authors = ["Morgan Ross <morgan@example.com>"]
description = "Convert tree lists or JSON into directories & Markdown files"
license = "MIT"

[dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
